# SocialNetwork

./: .gitignore  README.md  db.sqlite3  pyproject.toml
core/: admin.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_comments_datatime.py  0002_rename_frofiles_profiles.py  0003_auto_20221028_1209.py  0003_auto_20221106_2329.py  0004_auto_20221028_1304.py  0004_auto_20221108_1158.py  0005_alter_comments_datatime.py  0005_auto_20221028_1351.py  0006_auto_20221029_1548.py
social/: settings.py  urls.py
templates/: index.html  profile.html  setting.html  signin.html  signup.html
