[tool.poetry]
name = "socialnetwork"
version = "0.1.0"
description = ""
authors = ["quangthanhn485 <quangthanhn485@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^3.2.5"
mysqlclient = "^2.1.1"
pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
